--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=127.0.0.1; Port=5432; Database=aap; User=usuario; Password=clave; Trust Server Certificate=true;"
+  }
 }
