--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=127.0.0.1; Port=5432; Database=aap; User=usuario; Password=clave; Trust Server Certificate=true;"
+    "Default": "Host=127.0.0.1;Port=5432;Database=aap;Username=usuario;Password=clave;Trust Server Certificate=true;"
   }
 }
